# Libusbpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
cmake/: FindLibUSB-1.0.cmake  disallow_insource_build.cmake  get_cpm.cmake
examples/: LibusbTest.cpp
headers/: libusbpp.hpp
headers/libusbpp/: Configuration.hpp  Device.hpp  Endpoint.hpp  EndpointDefs.hpp  Exception.hpp  Interface.hpp  Transfer.hpp  TransferDefs.hpp
src/: CMakeLists.txt  Configuration.cpp  ConfigurationImpl.cpp  ConfigurationImpl.hpp  Device.cpp  DeviceImpl.cpp  DeviceImpl.hpp  Endpoint.cpp  EndpointImpl.cpp  EndpointImpl.hpp  Exception.cpp  Interface.cpp  InterfaceImpl.cpp  InterfaceImpl.hpp  LibusbImpl.cpp  LibusbImpl.hpp  Transfer.cpp  TransferImpl.cpp  TransferImpl.hpp  Wideconvert.cpp  Wideconvert.hpp  libusbpp.cpp
